<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableTint="@color/purple_200"
            android:text="@string/roundedcornerstransformation"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableTint="@color/purple_200"
            android:text="@string/circlecroptransformation"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableTint="@color/purple_200"
            android:text="@string/blurtransformation"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableTint="@color/purple_200"
            android:text="@string/grayscaletransformation"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableTint="@color/purple_200"
            android:text="@string/cropTransformation"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableTint="@color/purple_200"
            android:text="@string/squareCropTransformation"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableTint="@color/purple_200"
            android:text="@string/maskTransformation"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableTint="@color/purple_200"
            android:text="@string/video_frame"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableTint="@color/purple_200"
            android:text="@string/palette"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn8" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv1"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn9"
            tools:srcCompat="@tools:sample/avatars" />

        <RelativeLayout
            android:id="@+id/rlPalette"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn9">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/p1"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/vibrantswatch"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/p2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/p1"
                android:gravity="center"
                android:text="@string/darkvibrantswatch"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/p3"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/p2"
                android:gravity="center"
                android:text="@string/lightvibrantswatch"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/p4"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/p3"
                android:gravity="center"
                android:text="@string/mutedswatch"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/p5"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/p4"
                android:gravity="center"
                android:text="@string/darkmutedswatch"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/p6"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/p5"
                android:gravity="center"
                android:text="@string/lightmutedswatch"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
